# youtube-source-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PROGRESS.md  README.md  cliff.toml
.github/: dependabot.yml  markdown-link-check.json
.github/workflows/: ci.yml  docs.yml  release.yml
benches/: cipher_performance.rs  client_performance.rs  simple_benchmarks.rs
examples/: basic_usage.rs  debug_api.rs  debug_formats.rs  demo.rs  performance_benchmark.rs  test_advanced_cipher.rs  test_client_capabilities.rs  test_complete_pipeline.rs  test_enhanced_manager.rs  test_formats.rs  test_js_engine.rs  test_multi_client.rs  test_oauth2.rs  test_playlist_and_mix.rs  test_real_api.rs  test_search.rs
src/: config.rs  error.rs  lib.rs  manager.rs  playlist.rs  search.rs  track.rs  utils.rs
src/api/: client.rs  endpoints.rs  mod.rs  responses.rs
src/cipher/: advanced_cipher.rs  js_engine.rs  manager.rs  mod.rs  operations.rs  script_parser.rs
src/client/: android.rs  base.rs  config.rs  embedded.rs  ios.rs  mod.rs  music.rs  traits.rs  tv.rs  web.rs
src/http/: auth.rs  client.rs  filter.rs  mod.rs  oauth.rs
src/plugin/: client_provider.rs  config.rs  info.rs  loader.rs  mod.rs  oauth_config.rs  pot.rs  rest.rs  utils.rs
test-infrastructure/: Dockerfile.testbot  SETUP.md  docker-compose.yml  prometheus.yml  run-tests.sh
test-infrastructure/lavalink-v3-config/: application.yml
test-infrastructure/lavalink-v4-config/: application.yml
test-infrastructure/testbot/: index.js  package.json
tests/: basic_integration_tests.rs  basic_unit_tests.rs  cipher_tests_simple.rs  integration_tests.rs  lavalink_integration_tests.rs  lavalink_tests.rs  mock_tests.rs  utils_tests_simple.rs
