[package]
name = "youtube-source-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
url = { version = "2.5.4", features = ["serde"] }
